Changed small layout issues

--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,17 @@
 html{
 	background: black; 
 }
-nav li{
+nav li, a {
 	list-style-type:none;
 	text-decoration: none;
-	
+	display: inline;
+	font-size: 40px;	
+	padding: 15px;
+	color: red;
 }
-nav {	
-	position: fixed;
-	top: 30px;
-	left: 30px;
+nav{
+	color:red;
+	margin 0: auto;
 }
 
 .main_txt{
@@ -23,12 +25,24 @@ nav {
 }
 
 .footer{
-	background: white;
 	margin: 20px auto 20px auto; 
 	padding: 20px;
+	width: 800px;
+	margin: 0 auto;
+	text-align: center;
+	color: blue;
 }
 
 .footer img {
 	text-align: right;
 }
 
+
+.header{
+	top: 0;
+	width:800px;
+	margin: 0 auto;
+	height:50px;
+	/*background-color:red;*/
+	z-index:1000;
+}
